<resources>
    <string name="app_name">ComercialesAPP</string>
    <string name="navigation_drawer_open">Abrir panel de opciones</string>
    <string name="navigation_drawer_close">Cerrar panel de opciones</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">usuario@empresa.com</string>
    <string name="nav_header_desc">Cabecera</string>
    <string name="action_settings">Opciones</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Delegación</string>
    <string name="menu_slideshow">Partners</string>
    <string name="menu_tools">Pedidos</string>
    <string name="menu_share">Agenda</string>
    <string name="title_activity_delegacion">Mapa</string>
    <string name="id_cliente">ID DEL CLIENTE:</string>
    <string name="empresa_cliente">EMPRESA:</string>
    <string name="nombre_cliente">NOMBRE:</string>
    <string name="apellido_1_cliente">APELLIDO 1:</string>
    <string name="apellido_2_cliente">APELLIDO 2:</string>
    <string name="dni_cliente">DNI:</string>
    <string name="ciudad_cliente">CIUDAD:</string>
    <string name="direccion_1_cliente">DIRECCIÓN 1:</string>
    <string name="direccion_2_cliente">DIRECCIÓN 2:</string>
    <string name="forma_de_pago_cliente">FORMA DE PAGO:</string>
    <string name="id_comercial_cliente">ID DEL COMERCIAL:</string>
    <string name="agregar">Guardar Nuevo Cliente</string>

    <string name="actuales">Actuales</string>
    <string name="crear_nuevo_partner">Crear Nuevo Partner</string>

    <string name="titulo">BIENVENIDO</string>
    <string name="correoPartners">CORREO:</string>
    <string name="telefonoPartner">TELÉFONO:</string>
    <string name="articuloPedido">ARTICULO:</string>
    <string name="precioArticulo">PRECIO:</string>
    <string name="descuentoArticulo">DESCUENTO(%):</string>
    <string name="cantidadArticulo">CANTIDAD:</string>
    <string name="catalogoArticulos">CATÁLOGO</string>
    <string name="confirmar_pedido">CONFIRMAR PEDIDO</string>
    <string name="correoDelegacion">MANDAR CORREO A DELEGACIÓN</string>
    <string name="telefonoDelegacion">LLAMAR A DELEGACIÓN</string>
    <string name="botonPedidoHome">Pedido</string>
    <string name="LoginPasswd">Contraseña</string>
    <string name="LoginCorreo">Correo</string>
    <string name="LoginInicioSesion">Iniciar sesión</string>
    <string name="ej_943512438">ej:943512438</string>
    <string name="ej_correo">ej:patxi@cebanc.com</string>
    <string name="_dni">ej:42415241M</string>

    <string-array name="partners">
        <item>Cebanc</item>
        <item>Adidas</item>
        <item>Fsociety</item>
        <item>Ecorp</item>
    </string-array>
</resources>
