<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutCreacionPartnersID"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/creacionPartnerID2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/NUEVO"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/layoutClienteIDNuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblIDNuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/id_cliente" />

                        <EditText
                            android:id="@+id/txtIDNuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:inputType="number" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutEmpresaNuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblEmpresa"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/empresa_cliente" />

                        <EditText
                            android:id="@+id/txtEmpresaNuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutNombreNuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblNombreNuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/nombre_cliente" />

                        <EditText
                            android:id="@+id/txtNombreNuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutApellido1Nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblApellido1Nuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/apellido_1_cliente" />

                        <EditText
                            android:id="@+id/txtApellido1Nuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutApellido2Nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblApellido2Nuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/apellido_2_cliente" />

                        <EditText
                            android:id="@+id/txtApellido2Nuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutDNINuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblDNINuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dni_cliente" />

                        <EditText
                            android:id="@+id/txtDNINuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:hint="@string/_dni"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutCiudadNuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblCiudadNuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/ciudad_cliente" />

                        <EditText
                            android:id="@+id/txtCiudadNuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutDireccion1Nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblDireccion1Nuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/direccion_1_cliente" />

                        <EditText
                            android:id="@+id/txtDireccion1Nuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:inputType="text"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutDireccion2Nuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblDireccion2Nuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/direccion_2_cliente" />

                        <EditText
                            android:id="@+id/txtDireccion2Nuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:inputType="text" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutFPNuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblFPNuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/forma_de_pago_cliente" />

                        <EditText
                            android:id="@+id/txtFPNuevo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblCorreo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/correoPartners" />

                        <EditText
                            android:id="@+id/txtCorreo"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:hint="@string/ej_correo"
                            android:inputType="textEmailAddress" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblTelefono"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/telefonoPartner" />

                        <EditText
                            android:id="@+id/txtTelefono"
                            android:layout_width="0px"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.5"
                            android:ems="10"
                            android:hint="@string/ej_943512438"
                            android:inputType="phone" />
                    </LinearLayout>
                    <Button
                        android:id="@+id/btnPartnerNuevo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/agregar" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>