<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    >
    <ImageView
      android:id="@+id/imgArticulo"
      android:layout_width="81dp"
      android:layout_height="81dp"
      android:layout_gravity="right"
      android:layout_marginEnd="20dp"
      android:layout_marginStart="30dp"
      android:adjustViewBounds="true"
      android:scaleType="fitCenter"
      />

    <EditText
      android:id="@+id/idArticulo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:enabled="false"
      android:visibility="gone"
      />

  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginStart="30dp"
      android:text="@string/articuloPedido" />
    <EditText
      android:id="@+id/txtArticuloCatalogo"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1.5"
      android:layout_marginEnd="30dp"
      android:ems="10"
      />
  </LinearLayout>

  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/lblPrecio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginStart="30dp"
      android:text="@string/precioArticulo" />

    <EditText
      android:id="@+id/txtCantidad"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0.5"
      android:layout_marginEnd="30dp"
      />

    <TextView
      android:id="@+id/lblDescuento"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:layout_marginStart="30dp"
      android:text="@string/descuentoArticulo" />

    <EditText
      android:id="@+id/txtDescuento"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0.5"
      android:layout_marginEnd="30dp"
      />
  </LinearLayout>
  <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:text="@string/cantidadArticulo"
      />
    <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:ems="3"
      />
  </LinearLayout>
</LinearLayout>
